Added ml moduel and ai intregation

--- a/ai_intratation/data_generator.ipynb
+++ b/ai_intratation/data_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "66d74bc9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
     "    \"service\": [\"Netflix\", \"Spotify\", \"Amazon Prime\", \"YouTube Premium\"]\n",
     "}\n",
     "\n",
-    "ROWS_PER_CATEGORY = 7000 # change this if you want more\n",
+    "ROWS_PER_CATEGORY = 7000 # change this if you want more data in the csv file\n",
     "Data_set_name = \"Training_data.csv\"\n",
     "\n",
     "data = []\n",
